--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ body {
 
 #dababypic {
     width: 350px;
+    max-width: 300px;
 }
 
 .section2 p, h2 {
@@ -224,7 +225,7 @@ body {
 * RESPONSIVE MOD
 ** ======================= */
 
-@media only screen and (max-width: 768px) /***Tab device*/ {
+@media only screen and (max-width: 1024px) /***Tab device*/ {
 
     /**
 * EDITER LE HEADER
@@ -286,6 +287,7 @@ body {
     margin-right: 90px;
     margin-left: 90px;
     display: block;
+    padding-bottom: 40px;
 }
 
 .groupeintextsection2 {
@@ -295,10 +297,9 @@ body {
 }
 
 #dababypic {
-    min-width: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 300px;
+    display: flex;
+    justify-content: center;
 }
 
 .section2 p, h2 {
@@ -312,6 +313,59 @@ body {
 .section2 h2 {
     font-size: 30px;
 }
+
+/**
+* EDITER LA SECTION 3
+** ======================= */
+
+.section3 h3{
+    text-align: center;
+    font-size: 35px;
+}
+
+.artiste-para {
+    display: block;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 70px;
+    padding-right: 70px;
+}
+
+.artiste-para p {
+    text-align: center;
+    font-weight: bold;
+}
+
+#artist-profile {
+    border-radius: 100%;
+    max-width: 100%;
+}
+
+.circle {
+    border-radius: 100%;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 290px;
+    max-width: 100%;
+}
+
+.galery-artist {
+    display: block;
+    padding-right: 140px;
+    padding-left: 140px;
+    gap: 12px 18px;
+    grid-template-areas:
+      "Block . . ."
+      ". . . ."
+      ". . . .";
+  }
+
+  .galery-artist p {
+      text-align: center;
+  }
 
 
 }
